--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,13 @@
 	date = {2024-07-01},
 	langid = {english},
 }
+
+@article{
+  ActuarialViewData,
+title={An Actuarial View of Data Bias: Definitions, Impacts, and Considerations},
+url = {https://www.actuary.org/sites/default/files/2023-07/risk_brief_data_bias.pdf},
+	author = {Andrews, Dorothy and Ackerman, Shawna and Kapylou, Dennis and Esche, Alex and Huang, Liaw and Mularz, Reese},
+	urldate = {2025-01-11},
+	date = {2023-07},
+	langid = {english},
+	}
